# simple-tcp-udp

./: CMakeLists.txt  upp.json
apps/: CMakeLists.txt  example.cpp  exampleClient.cpp  exampleServer.cpp
include/: Simple.hpp
include/Simple/: ClientTCP.hpp  ServerTCP.hpp  SimpleClass.hpp
src/: CMakeLists.txt  ClientTCP.cpp  ServerTCP.cpp  SimpleClass.cpp
tests/src/: SimpleClassTest.cpp
